@@ -157,16 +157,16 @@
         <description>Fields holding injectables should be declared final.</description>
         <cypher><![CDATA[
             MATCH
-              (artifact:Artifact)-[:CONTAINS]->(source:Type:Injectable)-[declares:DECLARES]->(field:Field)-[:OF_TYPE]->(target:Type:Injectable)
+              (artifact:Artifact)-[:CONTAINS]->(type:Type:Injectable)-[declares:DECLARES]->(field:Field)-[:OF_TYPE]->(injectedType:Type:Injectable)
             WHERE NOT (
               artifact:Test
-              OR source:Generated
+              OR type:Generated
               OR (exists(field.final) AND field.final = true)
               OR (exists(field.synthetic) AND field.synthetic) // synthetic fields, e.g. generated by Groovy
             )
             RETURN
-              source as InjectableType, field as InjectableField
-        ]]></cypher>
+              type AS Type, field AS Field, injectedType AS InjectedType
+            ]]></cypher>
         <report primaryColumn="InjectableField"/>
     </constraint>
 
